--- a/list_web/blog/static/login.css
+++ b/list_web/blog/static/login.css
@@ -17,7 +17,9 @@ body {
     height: 100%;
     z-index: -1; /* Place the video behind other content */
 }
-
+span{
+    color: white;
+}
 video {
     object-fit: cover;
     width: 100%;
