--- a/list_web/blog/templates/index.html
+++ b/list_web/blog/templates/index.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>  
-            <h1 id="ho">블로그</h1>
- 
+    <h1 id="ho">Prototype</h1>
 
     <nav>
         <ul>
             <li><a href="{% url 'index' %}">홈</a></li>
             <li class="">
                 {% if request.user.is_authenticated %}
-                <a href="/login">로그인</a>
+                <a href="{% url 'logout' %}">로그아웃</a>
                 {% else %}
-                <a href="/login">로그아웃</a>
+                    <a href="{% url 'login' %}">로그인</a>
                 {% endif %}
             </li>
             <li><a href="#">태그</a></li>
@@ -38,19 +37,19 @@
                 </thead>
                 <tbody>
                     {% for post in Post %}
-                  <tr>
-                    <td>{{ post.postnum }}</td>
-                    <td>{{ post.posttitle }}</td>
-                    <td>{{ post.postdate|date:"Y-m-d" }}</td>
-                  </tr>
-                  {% endfor %}
+                      <tr>
+                        <td>{{ post.postnum }}</td>
+                        <td>{{ post.posttitle }}</td>
+                        <td>{{ post.postdate|date:"Y-m-d" }}</td>
+                      </tr>
+                    {% endfor %}
                 </tbody>
-              </table>  
+            </table>  
         </section>
     </main>
 
     <footer>
-        <p>this blog was made by KangJuHo</p>
+        <p>made by KangJuHo</p>
     </footer>
 </body>
 </html>
